--- a/assets/css/1.css
+++ b/assets/css/1.css
@@ -35,3 +35,23 @@ aside {
   height: 200px;
   padding: 20px;
 }
+
+@media screen and (min-width: 576px) {
+  aside p {
+    color: white;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  header {
+    background-color: rgb(51 31 34);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  nav p {
+    background-color: brown;
+    height: 100px;
+    padding: 10px;
+  }
+}
