--- a/assets/css/1.css
+++ b/assets/css/1.css
@@ -49,9 +49,7 @@ aside {
 }
 
 @media screen and (min-width: 768px) {
-  nav p {
+  nav {
     background-color: brown;
-    height: 100px;
-    padding: 10px;
   }
 }
