add comment about using mutiple elements

--- a/assets/css/1.css
+++ b/assets/css/1.css
@@ -9,7 +9,7 @@ header {
   padding: 20px;
   text-align: center;
 }
-
+/* use commas to use multiple selcetors instead of writing the same rule numerous times  */
 nav,
 aside,
 footer,
