--- a/assets/css/3.css
+++ b/assets/css/3.css
@@ -1,26 +1,31 @@
-body {
-  font-size: 40px;
-}
-
-.main header {
-  background-color: rgb(96 143 231);
+.main-header {
+  background-color: deepskyblue;
   text-align: center;
   padding: 0.5rem;
 }
 
 main {
-  background-color: rgb(4 70 4);
+  background-color: rgb(26 168 224);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .card {
   background-color: blue;
   border: solid 1px black;
   color: white;
-  padding: 1rem 0.5rem;
+  padding: 4rem 0.5rem;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
   main {
     flex-direction: row;
+    justify-content: space-around;
   }
+}
+
+.card {
+  min-width: 25%;
 }
