--- a/assets/css/5.css
+++ b/assets/css/5.css
@@ -13,7 +13,40 @@ nav {
   background-color: darkorange;
   text-align: center;
   display: flex;
-  padding: 20px;
+  padding: 1.5rem 3.5rem;
   flex-direction: column;
-  gap: 1.5rem 3.5rem;
+  gap: 1rem;
+}
+
+a {
+  color: black;
+  font-size: 1.25em;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+aside {
+  background-color: olive;
+  padding: 1rem;
+  color: white;
+}
+
+@media screen and (min-width: 768px) {
+  header {
+    background-color: blue;
+  }
+
+  nav {
+    flex-direction: row;
+    padding: 0.5rem;
+  }
+  main {
+    display: flex;
+  }
+  aside {
+    width: 20%;
+  }
+  section {
+    width: 80%;
+  }
 }
