--- a/assets/css/7.css
+++ b/assets/css/7.css
@@ -2,9 +2,22 @@
   background-color: cornflowerblue;
   color: white;
   padding: 30px;
+  border-radius: 3px;
+  box-shadow: 10px 7px 14px 6px rgba(53, 165, 189, 0.67);
 }
 
 h2 {
   font-size: 1.5rem;
   font-weight: bold;
+  text-align: center;
+}
+
+.products {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  height: 100vh;
+  justify-content: center;
 }
